WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135511
REGRESSION (
r169357
): Disabling "allow plug-ins" doesn't stick on quit/relaunch
https://bugs.webkit.org/show_bug.cgi?id=135511
Summary
REGRESSION (r169357): Disabling "allow plug-ins" doesn't stick on quit/relaunch
mitz
Reported
2014-08-01 10:12:29 PDT
<
rdar://problem/17862013
> When opening Safari, the Allow Plug-ins option in preferences is enabled, even if it has been previously disabled. This was caused by <
http://trac.webkit.org/r169357
>.
Attachments
Respect user defaults when overrides are registered
(11.67 KB, patch)
2014-08-01 10:19 PDT
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-08-01 10:19:37 PDT
Created
attachment 235892
[details]
Respect user defaults when overrides are registered
Alexey Proskuryakov
Comment 2
2014-08-01 11:09:39 PDT
Comment on
attachment 235892
[details]
Respect user defaults when overrides are registered View in context:
https://bugs.webkit.org/attachment.cgi?id=235892&action=review
Nice.
> Source/WebKit2/UIProcess/mac/WebPreferencesMac.mm:62 > + if (!m_identifier) > + return false;
I don't understand this addition, didn't we use to assert in makeKey? Why does this need to be a runtime check?
mitz
Comment 3
2014-08-01 11:21:37 PDT
Comment on
attachment 235892
[details]
Respect user defaults when overrides are registered View in context:
https://bugs.webkit.org/attachment.cgi?id=235892&action=review
>> Source/WebKit2/UIProcess/mac/WebPreferencesMac.mm:62 >> + return false; > > I don't understand this addition, didn't we use to assert in makeKey? Why does this need to be a runtime check?
registerDefaultBoolValueForKey calls platformGetBoolUserValueForKey even if the identifier is empty. I guess I could have added the checks there, but it seems logical to handle the no-identifier (and therefore no user defaults) case here.
mitz
Comment 4
2014-08-01 11:23:09 PDT
Fixed in <
http://trac.webkit.org/r171928
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug